[gd_scene load_steps=2 format=3 uid="uid://bcyb0o4q71p01"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_ip7ai"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -24.0
offset_right = -20.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
script = ExtResource("1_ip7ai")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -15.0
offset_top = -3.0
offset_right = 99.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuickButton")
text = "Démarrer"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paramètres"

[node name="QuickButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quitter"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuickButton" to="." method="_on_quick_options_pressed"]
